--- a/foodie-dev-pojo/pom.xml
+++ b/foodie-dev-pojo/pom.xml
@@ -12,5 +12,13 @@
     <groupId>com.imooc</groupId>
     <artifactId>foodie-dev-pojo</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.imooc</groupId>
+            <artifactId>foodie-dev-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
