--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,13 @@
             <version>1.7.21</version>
         </dependency>
 
+        <!--pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.12</version>
+        </dependency>
+
 
 
     </dependencies>
